macros/tests/entry/fail/missing.stderr
error: Missing `table` argument
 --> tests/entry/fail/missing.rs:5:11
  |
5 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |           ^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/entry/fail/missing.rs:5:4
  |
5 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^ incorrect number of function parameters
  |
  = note: expected fn pointer `fn(EfiHandle, SystemTable<Boot>) -> Result<_, _>`
                found fn item `fn(EfiHandle) -> Result<_, _> {e_main}`
  = note: when the arguments and return types match, functions can be coerced to function pointers

error[E0061]: this function takes 1 argument but 2 arguments were supplied
 --> tests/entry/fail/missing.rs:5:4
  |
4 | #[entry]
  | -------- unexpected argument of type `SystemTable<Boot>`
5 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^
  |
note: function defined here
 --> tests/entry/fail/missing.rs:5:4
  |
5 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^ ------------------
